<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="solange.amor.my_love.activity.Carta">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/toolbar"
        android:background="@color/morado"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:foregroundGravity="bottom"
            app:srcCompat="@drawable/ic_leercarta"
            android:contentDescription="@string/app_name"
            tools:ignore="ContentDescription" />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:id="@+id/ola"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_below="@+id/toolbar"
                android:fontFamily="serif"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="italic"
                android:textIsSelectable="true"
                android:text="@string/primera_carta"
                android:textAlignment="viewStart"
                android:textColorLink="@color/morado"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white">
            </View>

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/creditos"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="I LOVE YOU"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/colorAccent">
            </TextView>
        </LinearLayout>


    </ScrollView>




</RelativeLayout>
