<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:background="#F4F4F4">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/solange"
                            android:tint="@color/rojo" />


                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/solange"
                            android:tint="@color/rojo"
                            />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:lineSpacingExtra="4sp"
                            android:textSize="17sp"
                            android:text="@string/segunda_carta"
                            android:textColor="@color/morado"
                            android:textStyle="bold" />
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/corazon"
                            android:tint="@color/rojo" />


                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/corazon"
                            android:tint="@color/rojo" />
                    </LinearLayout>
                </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:contentPaddingBottom="16dp"
                    app:contentPaddingLeft="16dp"
                    app:contentPaddingRight="16dp"
                    app:contentPaddingTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:text="Mi poema:"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="4sp"
                            android:fontFamily="casual"
                            android:textColor="@color/morado"
                            android:textSize="16sp"
                            android:textIsSelectable="true"
                            android:textStyle="bold"
                            android:text="@string/poema"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:contentPaddingBottom="16dp"
                    app:contentPaddingLeft="16dp"
                    app:contentPaddingRight="16dp"
                    app:contentPaddingTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:text="Tu poema:"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="4sp"
                            android:fontFamily="casual"
                            android:textColor="@color/morado"
                            android:textSize="16sp"
                            android:textIsSelectable="true"
                            android:textStyle="bold"
                            android:text="@string/tupoema"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </ScrollView>


